[package]
name = "uvth"
version = "3.1.1"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Compact and efficient threadpool implementation as an alternative to the threadpool crate."
repository = "https://gitlab.nebulanet.cc/xacrimon/uvth"

[dependencies]
crossbeam-channel = "0.3.8"
log = "0.4.6"
num_cpus = "1.10.1"
