[package]
name = "uvth"
version = "4.0.1"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Compact and efficient threadpool implementation as an alternative to the threadpool crate."
repository = "https://github.com/xacrimon/uvth"
documentation = "https://docs.rs/uvth"

[dependencies]
crossbeam-channel = "0.3.9"
log = "0.4.8"
num_cpus = "1.10.1"
